--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,6 +16,6 @@
     "theme_color": "#c5a879",
     "background_color": "#f7f3e5",
     "display": "standalone",
-    "start_url": "./",
+    "start_url": "/",
     "orientation": "any"
 }
